using System;

namespace Interface_Segregation_Solution;

public class CartItem
{
    public int ProductId { get; set; }
    public int Quantity { get; set; }
}
